--- a/src/assets/styles/components/_vars.scss
+++ b/src/assets/styles/components/_vars.scss
@@ -14,7 +14,7 @@ $font_family:'Noto';
 $color:#94A9C9;
 $bg_color:#131C31;
 $text_color:#b9e0f2;
-$background_color:#0F172A;
+$background_color_body:#0F172A;
 $border_color:linear-gradient(#222F43, #222F43) padding-box, 
 linear-gradient(to right, rgb(14, 165, 234), rgb(11, 209, 209));
 $btnBg_color:rgb(14, 165, 234);
